--- a/css/grid.css
+++ b/css/grid.css
@@ -68,8 +68,14 @@
   	height: 100px;
   }
 
+  .shortemptyblock{
+  	height: 80px;
+  }
 
 
+  .veryshortemptyblock{
+  	height: 20px;
+  }
   
 
 
